@@ -91,7 +91,10 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Add rudimentary Test::More modules for testing Debbugs::Mime and
       Debbugs::Mail. These are currently not called as part of the build
       process.
-
+    - Allow X-debbugs-* to be set in pseudo headers. (closes: #179340)
+    - Obey X-Debbugs-No-Ack in control@ messages. (closes: #201825)
+    - Allow forwarded: to be set at submit@ time. (closes: #128320)
+  
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
 
 debbugs (2.4.1) unstable; urgency=low
